--- a/NJS_PRS/index.html
+++ b/NJS_PRS/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-dpr="1" style="font-size: 37.5px;">
   <head>
     <title>游戏超人</title>
     <meta charset="utf-8">
