--- a/NJS_PRS/index.html
+++ b/NJS_PRS/index.html
@@ -113,7 +113,7 @@
       -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
       margin: 0;
       padding: 0;
-      background: #EDEFF1;
+      background: #fff;
     }
 
     input::-webkit-input-placeholder {
