--- a/NJS_PRS/index.html
+++ b/NJS_PRS/index.html
@@ -19,6 +19,7 @@
     <meta http-equiv="Expires" content="0" />
     <meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,minimal-ui">
     <link href="https://cdn.jsdelivr.net/npm/animate.css@3.5.1" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/promise-polyfill@7/dist/polyfill.min.js"></script>
     <script type="text/javascript" src="static/js/share.js"></script>
     <script>
         (function (win, doc) {
